# taz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  experiment_multiple_mini128.sh  experiment_multiple_mini512.sh
docs/: coll_algos.txt  collectives.ods
experiments/faultfree_mapping/: main.ipynb  mapping.html  run_faultfree_mapping_experiments.sh
experiments/traffic_generation/: main.ipynb  run_mapping_experiments_traffic.sh  run_mapping_experiments_veto.sh
generated_profile_headers_target/: instances_generated.h  main_generated.h
scripts/: compare_snapshots.py  decompress_test_apps.py  do_test_app.py  do_test_random.py  do_test_structure.py  find_iterations.py  generate_apps_traffic.py  generate_collective_trace.py  generate_mpi_primitives.py  generate_synth_trace.py  make_test_profiles.py  run_nightly_tests.sh  run_quick_tests.sh  show_snapshot.py  show_state_changes.py  taz.eb
scripts/fbs/taz/profile/: Matrix.py  PrimitiveInstance.py  PrimitiveType.py  ProfileFile.py  ProfileHeader.py  Property.py  TraceStep.py  TraceStepType.py
scripts/taz/: __init__.py  matrix.py  run_wrapper.py  snapshot.py  ti_trace.py
scripts/taz/utils/: __init__.py  dictionary.py  parsing.py  ranges.py
src/common/: ApproxMatrix.hpp  MemoryConsumer.hpp  Property.hpp  common.hpp  config.hpp.in  misc.cpp
src/common/flatbuffers/: main.fbs  matrix.fbs  property.fbs
src/common/mpi_flavors/ompi/: instances.fbs  instances_generated.h  main_generated.h  matrix_generated.h  primitives.list  property_generated.h
src/common/mpi_flavors/ompi_short/: primitives.list
src/profile/: MpiObjectsStorage.hpp  adhoc.cpp  notes.txt  taz-profile.hpp
src/show-csv/: main.cpp
src/show-matrix/: main.cpp
src/simulate/: AbstractCS.hpp  AtomicAction.cpp  AtomicAction.hpp  CollectiveEngine.hpp  Communicator.hpp  Engine.cpp  Engine.hpp  GenericPool.hpp  Model.cpp  Model.hpp  ParserCollection.hpp  PartitionedGraph.cpp  PartitionedGraph.hpp  Resource.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  Statistics.cpp  Statistics.hpp  configuration.cpp  main.cpp  misc.cpp  taz-simulate.hpp
src/simulate/colls/: AbstractCS.cpp  CollectiveEngine.cpp  CollectiveEngine_allgather.cpp  CollectiveEngine_allreduce.cpp  CollectiveEngine_alltoall.cpp  CollectiveEngine_barrier.cpp  CollectiveEngine_bcast.cpp  CollectiveEngine_reduce.cpp  IndexedCS.hpp  Tree.hpp  TreeCS.hpp
src/simulate/parsers/: AbstractParser.hpp  SimgridTIParser.cpp  SimgridTIParser.hpp  TrafficParser.hpp  VEFParser.cpp  VEFParser.hpp
src/simulate/resource_management/: AbstractJobHandling.cpp  AbstractJobHandling.hpp  BackfillingScheduler.hpp  FCFSScheduler.hpp  FixedMapper.hpp  LinearMapper.hpp  LinearVetoMapper.hpp  TrafficMapper.hpp
src/simulate/topologies/: AbstractTopology.cpp  AbstractTopology.hpp  FatTreeTopology.hpp  LoopbackTopology.hpp  TorusTopology.hpp
tests/conf/: apps_stretched.conf  apps_traffic.conf  basic.conf  deepest_bigger.conf
tests/point2point/concurrent/: trace.0  trace.1  trace.2  trace.3  trace.index
tests/point2point/nonblocking/: trace.0  trace.1  trace.2  trace.3
tests/point2point/simple/: expected.txt  trace.0  trace.1  trace.index
